struktura strony i komentarze       background color       footer responsywny aa       button/ font - update 2      Footer - SASS - responsive      Slider - nearly finish

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -107,6 +107,8 @@
       width: 100px;
       height: 100px;
       border-radius: 50px;
+      margin-right: 2px;
+      margin-left: 2px;
       transition: background-color 1500ms, color 1500ms, transform 1500ms;
     }
   }
