dodanie zdarzenia/start  gry

--- a/styles/game.scss
+++ b/styles/game.scss
@@ -42,3 +42,11 @@ $game-color-opacity: rgba(246,246,246,0.4);
   text-decoration: none;
   cursor: pointer;
 }
+
+
+.game-start {
+  width: 800px ;
+  height: 800px;
+  background-color: #2f6627;
+
+}
