wypozocjonowanie diva z gra

--- a/script/game1.css
+++ b/script/game1.css
@@ -1,12 +1,17 @@
+#game-container {
+  background-color: rgba(128, 128, 128, 0.82);
+  background-size: contain;
+  position: relative;
+  width: 100%;
+  height: 100%; }
+
 #game-start {
   width: 500px;
   height: 500px;
-  background-color: #2e578b; }
-
-#game {
-  width: 500px;
-  height: 500px;
-  background-color: #257f8b; }
+  background-color: #2e578b;
+  position: absolute;
+  left: 25%;
+  text-align: center; }
 
 #game-button {
   background-color: #82848b;
@@ -15,15 +20,26 @@
   color: #ffffff;
   font-weight: 600;
   font-family: 'Lato', sans-serif;
-  /*dodalam*/
   font-size: 20px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   padding: 30px;
   text-decoration: none; }
 
-.background-grey {
-  opacity: 0.9;
-  display: none; }
+#game-title {
+  padding: 50px 20px 20px;
+  font-family: 'Lato', sans-serif;
+  font-size: 30px; }
+
+#game-title-2 {
+  padding: 30px 20px 20px;
+  font-size: 20px; }
+
+#game-instruction {
+  padding: 20px 20px 2px;
+  font-size: 15px; }
+
+#game-arrow {
+  height: 50px;
+  text-align: center; }
 
 /*# sourceMappingURL=game1.css.map */
