--- a/script/game1.css
+++ b/script/game1.css
@@ -3,15 +3,15 @@
   background-size: contain;
   position: relative;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  display: none; }
 
 #game-start {
   width: 500px;
   height: 500px;
   background-color: #2e578b;
-  position: absolute;
-  left: 25%;
-  text-align: center; }
+  display: inline-block;
+  margin: auto; }
 
 #game-button {
   background-color: #82848b;
@@ -39,7 +39,7 @@
   font-size: 15px; }
 
 #game-arrow {
-  height: 50px;
+  height: 40px;
   text-align: center; }
 
 /*# sourceMappingURL=game1.css.map */
