--- a/script/game1.scss
+++ b/script/game1.scss
@@ -5,15 +5,15 @@
   position: relative;
   width: 100%;
   height: 100%;
+  display: none;
 }
 
 #game-start {
   width: 500px ;
   height: 500px;
   background-color: #2e578b;
-  position: absolute;
-  left: 25%;
-  text-align: center;
+  display: inline-block;
+  margin: auto;
 }
 
 #game-button {
@@ -46,6 +46,6 @@
 }
 
 #game-arrow {
-  height: 50px ;
+  height: 40px ;
   text-align: center;
 }
