uruchomienie gry cz.2

--- a/script/game1.css
+++ b/script/game1.css
@@ -43,8 +43,8 @@
   text-align: center; }
 
 .apples {
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   position: absolute;
   z-index: 200;
   width: 30px;
@@ -67,5 +67,12 @@ body {
   margin: 0 auto;
   position: relative;
   overflow: hidden; }
+
+#gameZone {
+  width: 500px;
+  height: 500px;
+  background-color: #2e578b;
+  display: inline-block;
+  margin: auto; }
 
 /*# sourceMappingURL=game1.css.map */
