--- a/script/game1.scss
+++ b/script/game1.scss
@@ -86,3 +86,13 @@ background-color: grey;
   display: inline-block;
   margin: auto;
 }
+
+.player {
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: 200;
+  width: 60px;
+  height: 30px;
+  background: #fffa35;
+}
