--- a/script/game1.scss
+++ b/script/game1.scss
@@ -85,9 +85,11 @@ background-color: grey;
 #gameZone {
   width: 500px ;
   height: 500px;
-  background-color: #2e578b;
+  //background-color: #2e578b;
   display: inline-block;
   margin: auto;
+  background-image: url('../images/game-background.png');
+  background-size: cover;
 }
 
 .player {
