kolizja elementow, zliczanie punktacji

--- a/styles/_features-team.scss
+++ b/styles/_features-team.scss
@@ -152,6 +152,7 @@ div.features-feature:last-child {
 
 #team {
     margin: 0;
+    padding-bottom: 40px;
     padding-top: 40px;
     background-color: #f6f6f6; }
 
