--- a/script/game1.css
+++ b/script/game1.css
@@ -1,5 +1,4 @@
 #game-container {
-  background-color: rgba(128, 128, 128, 0.82);
   background-size: contain;
   position: relative;
   width: 100%;
@@ -11,32 +10,36 @@
   height: 500px;
   background-color: #2e578b;
   display: inline-block;
-  margin: auto; }
+  margin: auto;
+  background-image: url("../images/game-background.png");
+  background-size: cover;
+  filter: grayscale(0.8); }
 
 #game-button {
   background-color: #82848b;
   display: block;
   cursor: pointer;
   color: #ffffff;
-  font-weight: 600;
+  font-weight: 500;
   font-family: 'Lato', sans-serif;
-  font-size: 20px;
+  font-size: 25px;
   margin: auto;
-  padding: 30px;
+  padding: 25px;
   text-decoration: none; }
 
 #game-title {
-  padding: 50px 20px 20px;
+  padding: 50px 20px 10px;
   font-family: 'Lato', sans-serif;
   font-size: 30px; }
 
 #game-title-2 {
-  padding: 30px 20px 20px;
+  padding: 10px 20px 10px;
   font-size: 20px; }
 
 #game-instruction {
-  padding: 20px 20px 2px;
-  font-size: 15px; }
+  padding: 20px 20px 10px;
+  font-size: 15px;
+  font-weight: 600; }
 
 #game-arrow {
   height: 40px;
@@ -52,9 +55,6 @@
   background-image: url("../images/apple.png");
   background-repeat: no-repeat;
   background-size: contain; }
-
-body {
-  background-color: grey; }
 
 #site {
   width: 500px;
