--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -6,6 +6,7 @@
   a.footer-social-icons {
     color: black;
     text-decoration: none;
+    overflow: hidden;
   }
   @each $nazwa1 in footer-youtube-icon,
   footer-facebook-icon,
