struktura strony i komentarze       background color       footer responsywny aa       button/ font - update 2      Footer - SASS - responsive      Slider - nearly finish      FINISH      overflow - hidden

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -97,6 +97,7 @@
   a.footer-social-icons {
     color: black;
     text-decoration: none;
+    overflow: hidden;
   }
   @each $nazwa1 in footer-youtube-icon,
   footer-facebook-icon,
